# AngioGen

./: .gitignore  INSTALL.md  README.md  requirements.txt  setup.py
config/: default.yaml  test.yaml
src/: .gitignore  INSTALL.md  generate.py  generate_graph.py  generate_images.py  generate_meshes.py  generate_networks.py  generate_three_d.py  generate_two_d.py  mesh.py  setup.py
src/config/: default.yaml
src/generators/: meshes.py  networks.py
src/generators/Classes/: __init__.py
src/graph/: generator.py
src/graph/lib/: NetworkBuilder.py
src/graph/lib/VascuSynth/: .gitignore  CMakeLists.txt
src/graph/lib/VascuSynth/lib/: Complicator.cpp  NodeTable.cpp  NodeTable.h  OptionParser.h  SupplyMap.cpp  VascuSynth.cpp  (+1 more)
src/mesh/: generator.py
src/mesh/lib/: MeshBuilder.py
src/network/: generator.py
src/network/lib/: NetworkBuilder.py
src/network/lib/VascuSynth/: CMakeLists.txt
src/network/lib/VascuSynth/lib/: Complicator.h  OxygenationMap.cpp  OxygenationMap.h  SupplyMap.h  VascularTree.cpp
src/scripts/: generate_train_test_split.py  visualise_pointcloud.py  visualise_points.py  visualise_single_image.py  visualise_voxel_grid.py  visualise_voxel_mesh_overlay.py
src/three_d/: generator.py
src/three_d/lib/: MeshBuilder.py  MeshSampler.py
src/three_d/lib/libvoxelize/: .gitignore
src/three_d/lib/triangle_hasher/: .gitignore  __init__.py  triangle_hash.cpp
src/two_d/: generator.py
src/two_d/lib/: ImageBuilder.py  Renderer.py
src/utils/: Config.py  PoolIStarMap.py  Sampler.py  __init__.py
src/utils/ImageOps/: SimpleOps.py  __init__.py
